package pt.ipp.isep.dei.esoft.project.domain;

public class Skill {

    private String name;

    public String getName() {
        return name;
    }

}
