package pt.ipp.isep.dei.esoft.project.mapper.dto;

public class TaskDTO {
}
