@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
skinparam linetype polyline
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class HRM {
}

class VFM {
}

class Skill {
    name
}

class Job {
    name
}

class Collaborator {
    name
    birthdate
    admissionDate
    address
    phoneNumber
    email
    taxpayerNumber
    identificationDocumentType
    identificationDocumentNumber
}

class Team {
}

class Task {
}

class Vehicle {
    vehiclePlate
    brand
    model
    type
    tare
    grossWeight
    currentKms
    registerDate
    acquisitionDate
    checkUpFrequency
}

class Checkup {
vehiclePlate
    date
    kms
}

HRM "1" - "*" Skill : registers >
HRM "1" - "*" Job : registers >
HRM "1" --- "*" Collaborator : registers >
HRM "1" -- "*" Skill : assigns >
HRM "1" -- "*" Team : generates >
Collaborator "*" -- "1" Job : has >
Collaborator "1" -- "*" Skill : has >
Team "1" - "1..*" Collaborator : has >
Task "*" -- "1" Team : is assigned to >
VFM "1" -- "*" Vehicle : registers >
VFM "1" -- "*" Vehicle : manages >
Vehicle "1" - "*" Checkup : has >
Task "1" - "*" Vehicle : has assigned >
VFM "1" -- "*" Checkup : registers >



@enduml